--- a/index.html
+++ b/index.html
@@ -2,14 +2,28 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./assets/css/styles.css" />
-    <title>Movie List</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./assets/css/styles.css" />
+  <title>Movies List</title>
 </head>
 
 <body>
+  <div>
+    <header>
+      <!-- <img src="./assets/img/logo.svg" class="header--logo header__logo--center" /> -->
+    </header>
+    <section>
+      <p>THE MOVIES DB</p>
+      <H3>Find any movie</H3>
 
+      <form>
+        <input type="text" id="search_query" name="search_query" placeholder="Search movies"/>
+      </form>
+
+    </section>
+  </div>
+  <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
