add empty divs as film containers

--- a/index.html
+++ b/index.html
@@ -21,6 +21,22 @@
         <input type="text" id="search_query" name="search_query" placeholder="Search movies"/>
       </form>
 
+      <div class="page" id="videos-container">
+        <p>All movies</p>
+      </div>
+
+      <div class="page" id="videos-container">
+        <p>All movies</p>
+      </div>
+
+      <div class="page" id="videos-container">
+        <p>All movies</p>
+      </div>
+
+      <div class="page" id="videos-container">
+        <p>All movies</p>
+      </div>      
+
     </section>
   </div>
   <script src="./assets/js/script.js"></script>
