add hide/show classes, add html markup, add code comments

--- a/index.html
+++ b/index.html
@@ -9,36 +9,37 @@
 </head>
 
 <body>
-  <div>
-    <header>
-      <!-- <img src="./assets/img/logo.svg" class="header--logo header__logo--center" /> -->
-    </header>
-    <section>
-      <p>THE MOVIES DB</p>
-      <H3>Find any movie</H3>
+  <header>
+    <img src="./assets/img/logo.svg" class="header--logo header__logo--center" />
+  </header>
+  <section>
+    <p>THE MOVIES DB</p>
+    <H3>Find any movie</H3>
 
-      <form>
-        <input type="text" id="search_query" name="search_query" placeholder="Search movies"/>
-      </form>
+    <form>
+      <input type="text" id="search_query" name="search_query" placeholder="Search movies" />
+    </form>
 
-      <div class="page" id="videos-container">
-        <p>All movies</p>
-      </div>
+    <div class="page1">
+      <p>All movies</p>
+      <ul id="page1_ul">
 
-      <div class="page" id="videos-container">
-        <p>All movies</p>
-      </div>
+      </ul>
+    </div>
 
-      <div class="page" id="videos-container">
-        <p>All movies</p>
-      </div>
+    <div class="page2 hide" id="page1">
+      <p>All movies</p>
+    </div>
 
-      <div class="page" id="videos-container">
-        <p>All movies</p>
-      </div>      
+    <div class="page3 hide">
+      <p>All movies</p>
+    </div>
 
-    </section>
-  </div>
+    <div class="page4 hide">
+      <p>All movies</p>
+    </div>
+
+  </section>
   <script src="./assets/js/script.js"></script>
 </body>
 
