inject scrpt into htlm, add classes to html tags

--- a/index.html
+++ b/index.html
@@ -13,30 +13,30 @@
     <img src="./assets/img/logo.svg" class="header--logo header__logo--center" />
   </header>
   <section>
-    <p>THE MOVIES DB</p>
-    <H3>Find any movie</H3>
+    <p class="page__title--color element--center">THE MOVIES DB</p>
+    <h3 class="element--center">Find any movie</h3>
 
-    <form>
-      <input type="text" id="search_query" name="search_query" placeholder="Search movies" />
+    <form class="element--center">
+      <input type="text" id="search_query" name="search_query" placeholder="Search movies" class="element--center"/>
     </form>
 
     <div class="page1">
-      <p>All movies</p>
+      <p class="page__title--color element--center">All movies</p>
       <ul id="page1_ul">
 
       </ul>
     </div>
 
     <div class="page2 hide" id="page1">
-      <p>All movies</p>
+      <p class="page__title--color element--center">All movies</p>
     </div>
 
     <div class="page3 hide">
-      <p>All movies</p>
+      <p class="page__title--color element--center">All movies</p>
     </div>
 
     <div class="page4 hide">
-      <p>All movies</p>
+      <p class="page__title--color element--center">All movies</p>
     </div>
 
   </section>
